# SWG-LLM

./: .gitignore  README.md  build.gradle.kts  gradlew  pyproject.toml  settings.gradle.kts
agents/: README.md
agents/agent_192_168_88_10/: README.md  tools.py
agents/agent_192_168_88_5/: README.md  tools.py
config/: cluster.yaml
consensus/: README.md  __init__.py  conflict_detector.py  debate_engine.py  refinement_loop.py
ingestion/: README.md  __init__.py  chunk_indexer.py  knowledge_store.py  query_interface.py  repository_ingestor.py
orchestrator/: README.md  __init__.py  __main__.py  cluster_manager.py
src/main/java/com/swgllm/: Main.java
src/main/java/com/swgllm/feedback/: FeedbackCaptureService.java  FeedbackRating.java  FeedbackRecord.java
src/main/java/com/swgllm/governance/: AutomaticEvaluationRunner.java  AutonomySafetyGovernor.java  GovernanceEvaluation.java  GovernanceMetrics.java  GovernancePolicy.java  GovernanceTestResult.java  QualitySafetyRegressionSuite.java  UnsafeOutputFilter.java
src/main/java/com/swgllm/inference/: CpuInferenceEngine.java  InferenceContext.java  InferenceEngine.java  IntelIgpuInferenceEngine.java
src/main/java/com/swgllm/ingest/: ArtifactParser.java  ChunkMetadata.java  Chunker.java  DocumentChunk.java  (+18 more)
src/main/resources/: application.yml
src/test/java/com/swgllm/: InferenceIntegrationTest.java  MainTest.java
swg_llm/: __init__.py  agent.py  cli.py  config.py  repository.py  vector_store.py
sync/: README.md  __init__.py  publisher.py
tests/: test_cluster_manager.py  test_consensus_protocol.py
(+38 files in other folders)
