[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swg-llm"
version = "0.1.0"
description = "Local assistant for indexing and editing the SWG repository"
authors = [{name = "SWG", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
    "transformers>=4.37",
    "torch>=2.1",
]

[project.scripts]
swg-llm = "swg_llm.cli:main"
